--- a/app/src/main/res/layout/model_select.xml
+++ b/app/src/main/res/layout/model_select.xml
@@ -5,16 +5,15 @@
     android:orientation="vertical">
 
     <include
-        layout="@layout/title_bar"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="46dp"
         android:id="@+id/include"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        layout="@layout/title_bar"
+        android:layout_width="fill_parent"
+        android:layout_height="65dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
     <ListView
+        android:id="@+id/list_select"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
