--- a/app/src/main/res/layout/model_select.xml
+++ b/app/src/main/res/layout/model_select.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <include
-        android:id="@+id/include"
+        android:id="@+id/include_title"
         layout="@layout/title_bar"
         android:layout_width="fill_parent"
         android:layout_height="65dp"
@@ -17,6 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/include" />
+        android:layout_below="@+id/include_title" />
 
 </RelativeLayout>
