--- a/app/src/main/res/layout/model_select.xml
+++ b/app/src/main/res/layout/model_select.xml
@@ -10,13 +10,16 @@
         android:layout_width="fill_parent"
         android:layout_height="65dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-1dp"
+        android:layout_marginTop="0dp" />
 
     <ListView
-        android:id="@+id/list_select"
+        android:id="@+id/model_list_select"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/include_title"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/include_title" />
+        android:background="@color/colorBackground" />
 
 </RelativeLayout>
