--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -77,8 +77,10 @@
             android:layout_alignTop="@id/divider2"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="200dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:gravity="center_horizontal"
-            android:imeOptions="actionDone"
+            android:imeOptions="actionGo"
             android:inputType="text"
             android:minWidth="100dp"
             android:textCursorDrawable="@drawable/et_cursor" />
