--- a/app/src/main/res/layout/lib_title_bar.xml
+++ b/app/src/main/res/layout/lib_title_bar.xml
@@ -23,8 +23,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="标题"
+        android:text="设置题库"
         android:textColor="#fff"
         android:textSize="22sp" />
+
 
 </RelativeLayout>
