--- a/app/src/main/res/layout/game_select.xml
+++ b/app/src/main/res/layout/game_select.xml
@@ -42,11 +42,11 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
-            android:background="@drawable/writeword"
+            android:background="@drawable/fighter"
             android:contentDescription="@string/icon"
             android:visibility="visible" />
 
