--- a/app/src/main/res/layout/study_choices_head.xml
+++ b/app/src/main/res/layout/study_choices_head.xml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
-    >
+    android:elevation="5dp">
 
     <ImageButton
-        android:id="@+id/ib_title_back"
+        android:id="@+id/ib_study_title_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
+        android:layout_centerVertical="false"
         android:layout_marginStart="13dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="13dp"
         android:background="@null"
         android:src="@drawable/return_button" />
 
     <TextView
-<<<<<<< Updated upstream
-        android:id="@+id/tv_title"
-=======
-        android:id="@+id/lib_title"
->>>>>>> Stashed changes
+        android:id="@+id/tv_study_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="设置题库"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="100dp"
+        android:text="@string/stem"
         android:textColor="#fff"
         android:textSize="22sp" />
-
 
 </RelativeLayout>
