--- a/app/src/main/res/layout/lib_item.xml
+++ b/app/src/main/res/layout/lib_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="70dp"
@@ -12,7 +12,7 @@
     >
 
     <TextView
-        android:id="@+id/lib_item"
+        android:id="@+id/lib_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
@@ -24,12 +24,12 @@
         android:id="@+id/lib_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerHorizontal="true"
         android:thumb="@drawable/switch_custom_thumb_selector"
-        android:track="@drawable/switch_custom_track_selector"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="215dp"/>
+        android:track="@drawable/switch_custom_track_selector" />
 
-</LinearLayout>
+</RelativeLayout>
 
 
 
