--- a/app/src/main/res/layout/lib_main.xml
+++ b/app/src/main/res/layout/lib_main.xml
@@ -28,14 +28,7 @@
         android:scaleType="fitXY"
         android:layout_marginLeft="325dp"
         android:layout_marginTop="600dp"
-<<<<<<< Updated upstream
         android:background="@null"
-        //android:src="@drawable/add_lib_button" />
-
-=======
-        android:background="@null"/>
-        //android:src="@drawable/add_lib_button" />
-
-
->>>>>>> Stashed changes
+        android:src="@drawable/add_lib_button"
+    />
 </RelativeLayout>
