--- a/app/src/main/res/layout/activity_resource_list.xml
+++ b/app/src/main/res/layout/activity_resource_list.xml
@@ -7,21 +7,13 @@
     android:layout_height="match_parent"
     tools:context="com.dudes.dexin.bayae.RankList.ResourceList">
 
-    <include
-        android:id="@+id/include_lib_title"
-        layout="@layout/lib_title_bar"
-        android:layout_width="fill_parent"
-        android:layout_height="65dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"/>
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="34dp"
         android:layout_marginStart="34dp"
-        android:text="TextView"
+        android:text="排名：1"
         android:layout_toRightOf="@+id/textView5"
         android:layout_toEndOf="@+id/textView5"
         android:layout_alignBottom="@+id/textView5"
@@ -32,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
-        android:text="TextView"
+        android:text="库名：elc1"
         android:layout_marginLeft="13dp"
         android:layout_marginStart="13dp"
         android:layout_alignParentTop="true"
